network-policies/restricted-echo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-echo
spec:
  podSelector:
    matchLabels:
      app: restricted-echo
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
